tweak tag heirarchy

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -34,13 +34,14 @@
     </header>
     <main>
       <section id="mapPane" class="hide pane">
+        <div class="content"></div>
         <div class="map"></div>
       </section>
       <section id="plotsPane" class="hide pane">
-        <div class="features"></div>
+        <div class="content"></div>
       </section>
       <section id="summaryPane" class="hide pane">
-        <div class="features"></div>
+        <div class="content"></div>
         <time id="updated"></time>
       </section>
       <section id="selectPane">
