lowercase section names

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -54,7 +54,7 @@
         <section id="selectBar" class="bar hide">
           <div class="content">
             <h2>Select an Earthquake</h2>
-            <p>Select an earthquake from the list or on the <a href="#mapPane">Map</a>,
+            <p>Select an earthquake from the list or on the <a href="#mapPane">map</a>,
               or <a href="#" class="search">search</a> the catalog for an
               earthquake. You can also enter an Event ID manually below.</p>
             <h3>Significant Earthquakes <span>Past Month</span></h3>
@@ -126,7 +126,7 @@
         <div class="content">
           <h2>Find an Earthquake</h2>
           <p>Search the earthquake catalog and display the results on the
-            <a href="#mapPane">Map</a>.</p>
+            <a href="#mapPane">map</a>.</p>
           <h3>Magnitude</h3>
           <div class="slider-container">
             <div class="min">0</div>
@@ -207,10 +207,10 @@
           </p>
           <h3>Tips</h3>
           <ol class="iconlist">
-            <li>Click on an earthquake in a Summary list or on a (2d) plot
-              to view the earthquake and additional details on the Map.
+            <li>Click on an earthquake in a summary list or on a (2d) plot
+              to view the earthquake and additional details on the map.
             </li>
-            <li>Avoid unintentionally interacting with the Plots by scrolling
+            <li>Avoid unintentionally interacting with the plots by scrolling
                on the left / right edges of the page. Use the ‘control’ key to
                pan a 3d plot.
             </li>
