rename id value and remove uneeded class value

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -131,9 +131,9 @@
           <div class="slider-container">
             <div class="min">0</div>
             <div class="inverted slider" style="--min:0; --max:8; --val:3.5;">
-              <input id="mag" type="range" min="0" max="8" step="0.5"
+              <input id="catalog" type="range" min="0" max="8" step="0.5"
                 value="3.5" autocomplete="off">
-              <output for="mag">3.5</output>
+              <output for="catalog">3.5</output>
             </div>
             <div class="max">8</div>
           </div>
@@ -202,7 +202,7 @@
             of an earthquake using real-time data. It helps you visualize,
             analyze, and collect information to use in talking points and
             scientific response.</p>
-          <p class="comcat">Earthquake data is from
+          <p>Earthquake data is from
             <a href="https://earthquake.usgs.gov/data/comcat/">ComCat</a>.
           </p>
           <h3>Tips</h3>
