add options class and move css rules to sidebar

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -138,7 +138,7 @@
             <div class="max">8</div>
           </div>
           <h3>Time Period</h3>
-          <ul class="period">
+          <ul class="options period">
             <li id="month" class="selected">Past Month</li>
             <li id="week">Past Week</li>
             <li id="day">Past Day</li>
@@ -159,7 +159,7 @@
             <p class="utc">Use UTC time for custom dates.</p>
           </div>
           <h3>Region</h3>
-          <ul class="region">
+          <ul class="options region">
             <li id="worldwide" class="selected">Worldwide</li>
             <li id="customRegion">Custom</li>
           </ul>
