--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -116,7 +116,7 @@
               Mainshock’s magnitude and estimated rupture length.</p>
             <p>When you customize the parameters, the
               <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
-              automatically updated to reflect the new value(s), making it easy
+              automatically updated to reflect the new values, making it easy
               to share or bookmark your settings.</p>
             <p class="required">* All fields are required</p>
           </div>
@@ -199,7 +199,7 @@
         <div class="content">
           <h2>Earthquake Response App</h2>
           <p>This web application creates an interactive Map, Plots, and Summary
-            of an earthquake using real-time data. It helps you visualize,
+            of any earthquake using real-time data. It helps you visualize,
             analyze, and collect information to use in talking points and
             scientific response.</p>
           <p>Earthquake data is from
