--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -144,7 +144,7 @@
             <li id="day">Past Day</li>
             <li id="customPeriod">Custom</li>
           </ul>
-          <div class="period hide">
+          <div class="customPeriod hide option">
             <div class="dates">
               <div>
                 <label for="begin">Begin</label>
@@ -163,7 +163,7 @@
             <li id="worldwide" class="selected">Worldwide</li>
             <li id="customRegion">Custom</li>
           </ul>
-          <div class="region hide"></div>
+          <div class="customRegion hide option"></div>
           <p class="instructions hide">Click and drag to draw a new custom region.</p>
           <button type="button" id="search">Search</button>
         </div>
