add note below dd catalog option: NorCal only

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -119,6 +119,8 @@
               <li id="comcat" class="selected">ComCat</li>
               <li id="dd">Double Difference</li>
             </ul>
+            <p class="dd hide option">Note: contains events in Northern
+              California only.</p>
             <p>When you customize the settings, the
               <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
               automatically updated to reflect the new values, making it easy
