add option to swap the catalog if a Mainshock is selected

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -121,6 +121,10 @@
             </ul>
             <p class="dd hide option">Note: contains Northern California events
               only.</p>
+            <div class="swap hide">
+              <p>Currently showing <span>ComCat</span> earthquakes.</p>
+              <button type="button" id="swap">Swap</button>
+            </div>
             <p>When you customize settings, the
               <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
               automatically updated to reflect the new values, making it easy
