--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -33,14 +33,14 @@
       </nav>
     </header>
     <main>
-      <section id="mapPane" class="hide pane">
+      <section id="mapPane" class="pane hide">
         <div class="content"></div>
         <div class="map"></div>
       </section>
-      <section id="plotsPane" class="hide pane">
+      <section id="plotsPane" class="pane hide">
         <div class="content"></div>
       </section>
-      <section id="summaryPane" class="hide pane">
+      <section id="summaryPane" class="pane hide">
         <div class="content"></div>
         <time id="updated"></time>
       </section>
@@ -63,7 +63,7 @@
             <label for="eqid">Event ID</label>
             <input type="text" id="eqid" value="" required="required"
               pattern="^[^/\\:]+$" tabindex="1" />
-            <div class="hide details"></div>
+            <div class="details hide"></div>
             <button type="reset" id="reset">Reset</button>
           </div>
         </section>
@@ -74,8 +74,8 @@
               Mainshock’s magnitude and estimated rupture length.</p>
             <div class="aftershocks">
               <h3>Aftershocks
-                <span class="hide breather"></span>
-                <span class="hide count"></span>
+                <span class="breather hide"></span>
+                <span class="count hide"></span>
               </h3>
               <label for="as-mag">Min magnitude</label>
               <input type="number" id="as-mag" value="" min="0" max="9"
@@ -86,8 +86,8 @@
             </div>
             <div class="foreshocks">
               <h3>Foreshocks
-                <span class="hide breather"></span>
-                <span class="hide count"></span>
+                <span class="breather hide"></span>
+                <span class="count hide"></span>
               </h3>
               <label for="fs-mag">Min magnitude</label>
               <input type="number" id="fs-mag" value="" min="0" max="9"
@@ -101,8 +101,8 @@
             </div>
             <div class="historical">
               <h3>Historical Seismicity
-                <span class="hide breather"></span>
-                <span class="hide count"></span>
+                <span class="breather hide"></span>
+                <span class="count hide"></span>
               </h3>
               <label for="hs-mag">Min magnitude</label>
               <input type="number" id="hs-mag" value="" min="0" max="9"
@@ -115,11 +115,11 @@
                 autocomplete="off" required="required" tabindex="11" />
             </div>
             <h3>Earthquake Catalog</h3>
-            <ul class="options catalog">
+            <ul class="catalog options">
               <li id="comcat" class="selected">ComCat</li>
               <li id="dd">Double Difference</li>
             </ul>
-            <p class="dd hide option">Note: contains Northern California events
+            <p class="dd option hide">Note: contains Northern California events
               only.</p>
             <div class="swap hide">
               <p>Currently showing <span>ComCat</span> earthquakes.</p>
@@ -141,7 +141,7 @@
           <h3>Magnitude</h3>
           <div class="slider-container">
             <div class="min">0</div>
-            <div class="inverted slider" style="--min:0; --max:8; --val:3.5;">
+            <div class="slider inverted" style="--min:0; --max:8; --val:3.5;">
               <input id="catalog" type="range" min="0" max="8" step="0.5"
                 value="3.5" autocomplete="off">
               <output for="catalog">3.5</output>
@@ -149,13 +149,13 @@
             <div class="max">8</div>
           </div>
           <h3>Time Period</h3>
-          <ul class="options period">
+          <ul class="period options">
             <li id="month" class="selected">Past Month</li>
             <li id="week">Past Week</li>
             <li id="day">Past Day</li>
             <li id="customPeriod">Custom</li>
           </ul>
-          <div class="customPeriod hide option">
+          <div class="customPeriod option hide">
             <div class="dates">
               <div>
                 <label for="begin">Begin</label>
@@ -170,11 +170,11 @@
             <p class="utc">Use UTC time for custom dates.</p>
           </div>
           <h3>Region</h3>
-          <ul class="options region">
+          <ul class="region options">
             <li id="worldwide" class="selected">Worldwide</li>
             <li id="customRegion">Custom</li>
           </ul>
-          <div class="customRegion hide option"></div>
+          <div class="customRegion option hide"></div>
           <p class="instructions hide">Click and drag to draw a new custom region.</p>
           <button type="button" id="search">Search</button>
         </div>
