rename ‘swap’ button -> ‘switch’

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -123,7 +123,7 @@
               only.</p>
             <div class="swap hide">
               <p>Currently showing <span>ComCat</span> earthquakes.</p>
-              <button type="button" id="swap">Swap</button>
+              <button type="button" id="swap">Switch</button>
             </div>
             <p>When you customize settings, the
               <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
