add abbr tag to NCEDC

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -215,7 +215,9 @@
             scientific response.</p>
           <p>Earthquake data is from
             <a href="https://earthquake.usgs.gov/data/comcat/">ComCat</a> and/or
-            <a href="https://service.ncedc.org/fdsnws/event/1/">NCEDC</a>.
+            <a href="https://service.ncedc.org/fdsnws/event/1/">
+              <abbr title="Northern California Earthquake Data Center">NCEDC</abbr>
+            </a>.
           </p>
           <h3>Tips</h3>
           <ol class="iconlist">
