--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -119,8 +119,7 @@
               <li id="comcat" class="selected">ComCat</li>
               <li id="dd">Double Difference</li>
             </ul>
-            <p class="dd option hide">Note: contains Northern California events
-              only.</p>
+            <p class="dd option hide">Northern California events only</p>
             <div class="swap hide">
               <p>Currently showing <span>ComCat</span> earthquakes.</p>
               <button type="button" id="swap">Switch</button>
