--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -126,8 +126,8 @@
             </div>
             <p>When you customize settings, the
               <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
-              automatically updated to reflect the new values, making it easy
-              to share or bookmark your settings.</p>
+              updated to reflect the new values, making it easy to share or
+              bookmark your settings.</p>
             <p class="required">* All fields are required</p>
           </div>
         </section>
@@ -135,7 +135,7 @@
       <section id="searchBar" class="bar hide">
         <div class="content">
           <h2>Find an Earthquake</h2>
-          <p>Search the earthquake catalog and display the results on the
+          <p>Search the ComCat earthquake catalog and display the results on the
             <a href="#mapPane">map</a>.</p>
           <h3>Magnitude</h3>
           <div class="slider-container">
@@ -176,10 +176,10 @@
           <div class="customRegion option hide"></div>
           <p class="instructions hide">Click and drag to draw a new custom region.</p>
           <button type="button" id="search">Search</button>
-          <p>When you search the earthquake catalog, the
+          <p>When you search the catalog, the
             <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
-            automatically updated, making it easy to share or bookmark your
-            settings.</p>
+            updated to reflect the new parameter values, making it easy to share
+            or bookmark your settings.</p>
         </div>
       </section>
       <section id="legendBar" class="bar hide">
