add <abbr> to ComCat

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -217,7 +217,9 @@
             analyze, and collect information to use in talking points and
             scientific response.</p>
           <p>Earthquake data is from
-            <a href="https://earthquake.usgs.gov/data/comcat/">ComCat</a> and/or
+            <a href="https://earthquake.usgs.gov/data/comcat/">
+              <abbr title="ANSS Comprehensive Earthquake Catalog">ComCat</abbr>
+            </a> and/or
             <a href="https://service.ncedc.org/fdsnws/event/1/">
               <abbr title="Northern California Earthquake Data Center">NCEDC</abbr>
             </a>.
