dim reset button when no Mainshock selected

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -64,7 +64,7 @@
             <input type="text" id="eqid" value="" required="required"
               pattern="^[^/\\:]+$" tabindex="1" />
             <div class="details hide"></div>
-            <button type="reset" id="reset">Reset</button>
+            <button type="reset" id="reset" class="dim">Reset</button>
           </div>
         </section>
         <section id="settingsBar" class="bar hide">
