add title attrs to sidebar icons

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -24,11 +24,11 @@
           <li><a href="#summaryPane">Summary</a></li>
         </ul>
         <ul id="navSub">
-          <li><i class="icon-selectBar"></i></li>
-          <li><i class="icon-searchBar"></i></li>
-          <li><i class="icon-settingsBar"></i></li>
-          <li><i class="icon-legendBar"></i></li>
-          <li><i class="icon-infoBar"></i></li>
+          <li title="Select an Earthquake"><i class="icon-selectBar"></i></li>
+          <li title="Find an Earthquake"><i class="icon-searchBar"></i></li>
+          <li title="Settings"><i class="icon-settingsBar"></i></li>
+          <li title="Legend"><i class="icon-legendBar"></i></li>
+          <li title="Info / About"><i class="icon-infoBar"></i></li>
         </ul>
       </nav>
     </header>
