fix rendering issue with links in infoBar

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -218,11 +218,10 @@
             scientific response.</p>
           <p>Earthquake data is from
             <a href="https://earthquake.usgs.gov/data/comcat/">
-              <abbr title="ANSS Comprehensive Earthquake Catalog">ComCat</abbr>
-            </a> and/or
+              <abbr title="ANSS Comprehensive Earthquake Catalog">ComCat</abbr></a>
+            and/or
             <a href="https://service.ncedc.org/fdsnws/event/1/">
-              <abbr title="Northern California Earthquake Data Center">NCEDC</abbr>
-            </a>.
+              <abbr title="Northern California Earthquake Data Center">NCEDC</abbr></a>.
           </p>
           <h3>Tips</h3>
           <ol class="iconlist">
