--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -166,7 +166,7 @@
                 <input type="text" id="endtime" required="required" tabindex="3">
               </div>
             </div>
-            <p class="utc">Use UTC time for custom dates.</p>
+            <p class="utc">Custom dates use UTC time.</p>
           </div>
           <h3>Region</h3>
           <ul class="region options">
