--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -54,7 +54,7 @@
         <section id="selectBar" class="bar hide">
           <div class="content">
             <h2>Select an Earthquake</h2>
-            <p>Select an earthquake from the list or on the <a href="#mapPane">map</a>,
+            <p>Select an earthquake from the list or <a href="#mapPane">map</a>,
               or <a href="#" class="search">search</a> the catalog for an
               earthquake. You can also enter an Event ID manually below.</p>
             <h3>Significant Earthquakes <span>Past Month</span></h3>
