--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -70,7 +70,8 @@
         <section id="settingsBar" class="bar hide">
           <div class="content">
             <h2>Settings</h2>
-            <p>Initial values are set automatically based on the Mainshock’s
+            <p>Initial values for Aftershocks, Foreshocks, and Historical
+              Seismicity are set automatically based on the Mainshock’s
               magnitude and estimated rupture length.</p>
             <div class="aftershocks">
               <h3>Aftershocks
