add horizontal divider above “notes”

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -125,7 +125,7 @@
               <p>Currently showing <span>ComCat</span> earthquakes.</p>
               <button type="button" id="swap">Switch</button>
             </div>
-            <p>When you customize settings, the
+            <p class="note">When you customize settings, the
               <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
               updated to reflect the new values, making it easy to share or
               bookmark your settings.</p>
@@ -177,7 +177,7 @@
           <div class="customRegion option hide"></div>
           <p class="instructions hide">Click and drag to draw a new custom region.</p>
           <button type="button" id="search">Search</button>
-          <p>When you search the catalog, the
+          <p class="note">When you search the catalog, the
             <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
             updated to reflect the new parameter values, making it easy to share
             or bookmark your settings.</p>
