tweak .note padding and remove custom .github style

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -239,7 +239,7 @@
             <li><a href="mailto:shaefner@usgs.gov">Scott Haefner</a></li>
             <li><a href="mailto:baagaard@usgs.gov">Brad Aagaard</a></li>
           </ul>
-          <p class="github">
+          <p class="note">
             <a href="https://github.com/shaefner-usgs/esc-eq-response">Github
               repository</a>
           </p>
