add California-Nevada custom region

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -172,6 +172,7 @@
           <h3>Region</h3>
           <ul class="region options">
             <li id="worldwide">Worldwide</li>
+            <li id="ca-nv">California-Nevada</li>
             <li id="customRegion">Custom</li>
           </ul>
           <div class="customRegion option hide"></div>
