--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -125,10 +125,10 @@
               <p>Currently showing <span>ComCat</span> earthquakes.</p>
               <button type="button" id="swap">Switch</button>
             </div>
-            <p class="note">When you customize settings, the
+            <p class="note">When you customize the settings, the
               <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
-              updated to reflect the new values, making it easy to share or
-              bookmark your settings.</p>
+              automatically updated, making it easy to share or bookmark your
+              settings.</p>
             <p class="required">* All fields are required</p>
           </div>
         </section>
@@ -180,8 +180,8 @@
           <button type="button" id="search">Search</button>
           <p class="note">When you search the catalog, the
             <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
-            updated to reflect the new parameter values, making it easy to share
-            or bookmark your settings.</p>
+            automatically updated, making it easy to share or bookmark your
+            settings.</p>
         </div>
       </section>
       <section id="legendBar" class="bar hide">
