--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -117,7 +117,7 @@
             </div>
             <h3>Earthquake Catalog</h3>
             <ul class="catalog options">
-              <li id="comcat" class="selected">ComCat</li>
+              <li id="comcat">ComCat</li>
               <li id="dd">Double Difference</li>
             </ul>
             <p class="dd option hide">Northern California events only</p>
@@ -125,6 +125,11 @@
               <p>Currently showing <span>ComCat</span> earthquakes.</p>
               <button type="button" id="swap">Switch</button>
             </div>
+            <h3>Time Zone</h3>
+            <ul class="timezone options">
+              <li id="utc">UTC</li>
+              <li id="user">User</li>
+            </ul>
             <p class="note">When you customize the settings, the
               <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
               automatically updated, making it easy to share or bookmark your
