swap content/container classes

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -34,14 +34,14 @@
     </header>
     <main>
       <section id="mapPane" class="pane hide">
-        <div class="content"></div>
+        <div class="container"></div>
         <div class="map"></div>
       </section>
       <section id="plotsPane" class="pane hide">
-        <div class="content"></div>
+        <div class="container"></div>
       </section>
       <section id="summaryPane" class="pane hide">
-        <div class="content"></div>
+        <div class="container"></div>
         <time id="updated"></time>
       </section>
       <section id="selectPane">
@@ -52,7 +52,7 @@
     <aside id="sideBar">
       <form>
         <section id="selectBar" class="bar hide">
-          <div class="content">
+          <div class="container">
             <h2>Select an Earthquake</h2>
             <p>Select an earthquake from the list or <a href="#mapPane">map</a>,
               or <a href="#" class="search">search</a> the catalog for an
@@ -68,7 +68,7 @@
           </div>
         </section>
         <section id="settingsBar" class="bar hide">
-          <div class="content">
+          <div class="container">
             <h2>Settings</h2>
             <p>Initial values for Aftershocks, Foreshocks, and Historical
               Seismicity are set automatically based on the Mainshock’s
@@ -139,7 +139,7 @@
         </section>
       </form>
       <section id="searchBar" class="bar hide">
-        <div class="content">
+        <div class="container">
           <h2>Find an Earthquake</h2>
           <p>Search the ComCat earthquake catalog and display the results on the
             <a href="#mapPane">map</a>.</p>
@@ -190,7 +190,7 @@
         </div>
       </section>
       <section id="legendBar" class="bar hide">
-        <div class="content">
+        <div class="container">
           <h2>Legend</h2>
           <ul>
             <li class="mainshock">Mainshock</li>
@@ -217,7 +217,7 @@
         </div>
       </section>
       <section id="infoBar" class="bar hide">
-        <div class="content">
+        <div class="container">
           <h2>Earthquake Response App</h2>
           <p>This web application creates an interactive Map, Plots, and Summary
             of any earthquake using real-time data. It helps you visualize,
