--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta charset="utf-8">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,
-      maximum-scale=1.0, user-scalable=0" />
+      maximum-scale=1.0, user-scalable=0">
     <title>Earthquake Response App</title>
-    <link rel="stylesheet" href="lib/flatpickr/flatpickr.css" />
-    <link rel="stylesheet" href="lib/leaflet/leaflet.css" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="lib/flatpickr/flatpickr.css">
+    <link rel="stylesheet" href="lib/leaflet/leaflet.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
   </head>
   <body>
@@ -64,9 +64,61 @@
             <h3>Mainshock</h3>
             <label for="eqid">Event ID</label>
             <input type="text" id="eqid" value="" required="required"
-              pattern="^[^/\\:]+$" tabindex="1" />
+              pattern="^[^/\\:]+$" tabindex="1">
             <div id="mainshock"></div>
             <button type="reset" id="reset" class="dim">Reset</button>
+          </div>
+        </section>
+        <section id="searchBar" class="bar hide">
+          <div class="container">
+            <h2>Find an Earthquake</h2>
+            <p>Search the ComCat earthquake catalog and display the results on the
+              <a href="#mapPane">map</a>.</p>
+            <h3>Magnitude</h3>
+            <div class="slider-container">
+              <div class="min">0</div>
+              <div class="slider inverted" style="--min:0; --max:8; --val:3.5;">
+                <input id="minmagnitude" type="range" min="0" max="8" step="0.5"
+                  value="3.5" autocomplete="off">
+                <output for="minmagnitude">3.5</output>
+              </div>
+              <div class="max">8</div>
+            </div>
+            <h3>Time Period</h3>
+            <ul class="period options">
+              <li id="month">Past Month</li>
+              <li id="week">Past Week</li>
+              <li id="day">Past Day</li>
+              <li id="customPeriod">Custom</li>
+            </ul>
+            <div class="customPeriod option hide">
+              <div class="dates">
+                <div>
+                  <label for="starttime">Begin</label>
+                  <input type="text" id="starttime" required="required" tabindex="2">
+                </div>
+                <span>–</span>
+                <div>
+                  <label for="endtime">End</label>
+                  <input type="text" id="endtime" required="required" tabindex="3">
+                </div>
+              </div>
+              <p class="utc">Custom dates use UTC time.</p>
+            </div>
+            <h3>Region</h3>
+            <ul class="region options">
+              <li id="worldwide">Worldwide</li>
+              <li id="ca-nv">California-Nevada</li>
+              <li id="customRegion">Custom</li>
+            </ul>
+            <div class="customRegion option hide"></div>
+            <p class="instructions hide">Click and drag to draw a new custom
+              region.</p>
+            <button type="button" id="search">Search</button>
+            <p class="note">When you search the catalog, the
+              <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
+              automatically updated, making it easy to share or bookmark your
+              settings.</p>
           </div>
         </section>
         <section id="settingsBar" class="bar hide">
@@ -79,34 +131,34 @@
               <h3>Aftershocks</h3>
               <label for="as-mag">Min magnitude</label>
               <input type="number" id="as-mag" value="" min="0" max="9"
-                step="0.1" autocomplete="off" required="required" tabindex="4" />
+                step="0.1" autocomplete="off" required="required" tabindex="4">
               <label for="as-dist">Max distance <span>from Mainshock (km)</span></label>
               <input type="number" id="as-dist" value="" min="1" step="1"
-                autocomplete="off" required="required" tabindex="5" />
+                autocomplete="off" required="required" tabindex="5">
             </div>
             <div class="foreshocks dd-foreshocks">
               <h3>Foreshocks</h3>
               <label for="fs-mag">Min magnitude</label>
               <input type="number" id="fs-mag" value="" min="0" max="9"
-                step="0.1" autocomplete="off" required="required" tabindex="6" />
+                step="0.1" autocomplete="off" required="required" tabindex="6">
               <label for="fs-dist">Max distance <span>from Mainshock (km)</span></label>
               <input type="number" id="fs-dist" value="" min="1" step="1"
-                autocomplete="off" required="required" tabindex="7" />
+                autocomplete="off" required="required" tabindex="7">
               <label for="fs-days">Max days <span>before Mainshock</span></label>
               <input type="number" id="fs-days" value="" min="1" step="1"
-                autocomplete="off" required="required" tabindex="8" />
+                autocomplete="off" required="required" tabindex="8">
             </div>
             <div class="historical dd-historical">
               <h3>Historical Seismicity</h3>
               <label for="hs-mag">Min magnitude</label>
               <input type="number" id="hs-mag" value="" min="0" max="9"
-                step="0.1" autocomplete="off" required="required" tabindex="9" />
+                step="0.1" autocomplete="off" required="required" tabindex="9">
               <label for="hs-dist">Max distance <span>from Mainshock (km)</span></label>
               <input type="number" id="hs-dist" value="" min="1" step="1"
-                autocomplete="off" required="required" tabindex="10" />
+                autocomplete="off" required="required" tabindex="10">
               <label for="hs-years">Max years <span>before Mainshock</span></label>
               <input type="number" id="hs-years" value="" min="1" step="1"
-                autocomplete="off" required="required" tabindex="11" />
+                autocomplete="off" required="required" tabindex="11">
             </div>
             <h3>Earthquake Catalog</h3>
             <ul class="catalog options">
@@ -126,121 +178,69 @@
             <p class="required">* All fields are required</p>
           </div>
         </section>
+        <section id="legendBar" class="bar hide">
+          <div class="container">
+            <h2>Legend</h2>
+            <ul>
+              <li class="mainshock">Mainshock</li>
+              <li class="aftershocks">Aftershocks, Catalog Search
+                <ul>
+                  <li class="asHour">Past hour</li>
+                  <li class="asDay">Past day</li>
+                  <li class="asWeek">Past week</li>
+                  <li class="asOlder">Older</li>
+                </ul>
+              </li>
+              <li class="foreshocks">Foreshocks</li>
+              <li class="historical">Historical Seismicity</li>
+              <li class="magnitude">Magnitude</li>
+              <li class="fieldnotes hide">FieldNotes
+                <img src="img/pin-s-star+c0f@2x.png" alt="fieldnotes icon">
+              </li>
+              <li class="faults">Faults, Plate Boundaries</li>
+              <li class="shakemap">ShakeMap Stations</li>
+              <li class="intensity">Intensity
+                <img src="img/legend-intensity.png" alt="intensity scale">
+              </li>
+            </ul>
+          </div>
+        </section>
+        <section id="infoBar" class="bar hide">
+          <div class="container">
+            <h2>Earthquake Response App</h2>
+            <p>This web application creates an interactive Map, Plots, and Summary
+              of any earthquake using real-time data. It helps you visualize,
+              analyze, and collect information to use in talking points and
+              scientific response.</p>
+            <p>Earthquake data is from
+              <a href="https://earthquake.usgs.gov/data/comcat/">
+                <abbr title="ANSS Comprehensive Earthquake Catalog">ComCat</abbr></a>
+              and/or
+              <a href="https://service.ncedc.org/fdsnws/event/1/">
+                <abbr title="Northern California Earthquake Data Center">NCEDC</abbr></a>.
+            </p>
+            <h3>Tips</h3>
+            <ol class="iconlist">
+              <li>Click on an earthquake in a summary list or on a (2d) plot
+                to view the earthquake and additional details on the map.
+              </li>
+              <li>Avoid unintentionally interacting with the plots by scrolling
+                 on the left / right edges of the page. Use the ‘control’ key to
+                 pan a 3d plot.
+              </li>
+            </ol>
+            <h3>Contacts</h3>
+            <ul>
+              <li><a href="mailto:shaefner@usgs.gov">Scott Haefner</a></li>
+              <li><a href="mailto:baagaard@usgs.gov">Brad Aagaard</a></li>
+            </ul>
+            <p class="note">
+              <a href="https://github.com/shaefner-usgs/esc-eq-response">Github
+                repository</a>
+            </p>
+          </div>
+        </section>
       </form>
-      <section id="searchBar" class="bar hide">
-        <div class="container">
-          <h2>Find an Earthquake</h2>
-          <p>Search the ComCat earthquake catalog and display the results on the
-            <a href="#mapPane">map</a>.</p>
-          <h3>Magnitude</h3>
-          <div class="slider-container">
-            <div class="min">0</div>
-            <div class="slider inverted" style="--min:0; --max:8; --val:3.5;">
-              <input id="minmagnitude" type="range" min="0" max="8" step="0.5"
-                value="3.5" autocomplete="off">
-              <output for="minmagnitude">3.5</output>
-            </div>
-            <div class="max">8</div>
-          </div>
-          <h3>Time Period</h3>
-          <ul class="period options">
-            <li id="month">Past Month</li>
-            <li id="week">Past Week</li>
-            <li id="day">Past Day</li>
-            <li id="customPeriod">Custom</li>
-          </ul>
-          <div class="customPeriod option hide">
-            <div class="dates">
-              <div>
-                <label for="starttime">Begin</label>
-                <input type="text" id="starttime" required="required" tabindex="2">
-              </div>
-              <span>–</span>
-              <div>
-                <label for="endtime">End</label>
-                <input type="text" id="endtime" required="required" tabindex="3">
-              </div>
-            </div>
-            <p class="utc">Custom dates use UTC time.</p>
-          </div>
-          <h3>Region</h3>
-          <ul class="region options">
-            <li id="worldwide">Worldwide</li>
-            <li id="ca-nv">California-Nevada</li>
-            <li id="customRegion">Custom</li>
-          </ul>
-          <div class="customRegion option hide"></div>
-          <p class="instructions hide">Click and drag to draw a new custom
-            region.</p>
-          <button type="button" id="search">Search</button>
-          <p class="note">When you search the catalog, the
-            <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
-            automatically updated, making it easy to share or bookmark your
-            settings.</p>
-        </div>
-      </section>
-      <section id="legendBar" class="bar hide">
-        <div class="container">
-          <h2>Legend</h2>
-          <ul>
-            <li class="mainshock">Mainshock</li>
-            <li class="aftershocks">Aftershocks, Catalog Search
-              <ul>
-                <li class="asHour">Past hour</li>
-                <li class="asDay">Past day</li>
-                <li class="asWeek">Past week</li>
-                <li class="asOlder">Older</li>
-              </ul>
-            </li>
-            <li class="foreshocks">Foreshocks</li>
-            <li class="historical">Historical Seismicity</li>
-            <li class="magnitude">Magnitude</li>
-            <li class="fieldnotes hide">FieldNotes
-              <img src="img/pin-s-star+c0f@2x.png" alt="fieldnotes icon" />
-            </li>
-            <li class="faults">Faults, Plate Boundaries</li>
-            <li class="shakemap">ShakeMap Stations</li>
-            <li class="intensity">Intensity
-              <img src="img/legend-intensity.png" alt="intensity scale" />
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section id="infoBar" class="bar hide">
-        <div class="container">
-          <h2>Earthquake Response App</h2>
-          <p>This web application creates an interactive Map, Plots, and Summary
-            of any earthquake using real-time data. It helps you visualize,
-            analyze, and collect information to use in talking points and
-            scientific response.</p>
-          <p>Earthquake data is from
-            <a href="https://earthquake.usgs.gov/data/comcat/">
-              <abbr title="ANSS Comprehensive Earthquake Catalog">ComCat</abbr></a>
-            and/or
-            <a href="https://service.ncedc.org/fdsnws/event/1/">
-              <abbr title="Northern California Earthquake Data Center">NCEDC</abbr></a>.
-          </p>
-          <h3>Tips</h3>
-          <ol class="iconlist">
-            <li>Click on an earthquake in a summary list or on a (2d) plot
-              to view the earthquake and additional details on the map.
-            </li>
-            <li>Avoid unintentionally interacting with the plots by scrolling
-               on the left / right edges of the page. Use the ‘control’ key to
-               pan a 3d plot.
-            </li>
-          </ol>
-          <h3>Contacts</h3>
-          <ul>
-            <li><a href="mailto:shaefner@usgs.gov">Scott Haefner</a></li>
-            <li><a href="mailto:baagaard@usgs.gov">Brad Aagaard</a></li>
-          </ul>
-          <p class="note">
-            <a href="https://github.com/shaefner-usgs/esc-eq-response">Github
-              repository</a>
-          </p>
-        </div>
-      </section>
       <a class="icon-close">×</a>
     </aside>
     <footer>
