add version, date

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -234,10 +234,16 @@
               <li><a href="mailto:shaefner@usgs.gov">Scott Haefner</a></li>
               <li><a href="mailto:baagaard@usgs.gov">Brad Aagaard</a></li>
             </ul>
-            <p class="note">
+            <div class="note">
+              <dl class="props">
+                <dt>Version</dt>
+                <dd>development</dd>
+                <dt>Date</dt>
+                <dd>ongoing</dd>
+              </dl>
               <a href="https://github.com/shaefner-usgs/esc-eq-response">Github
                 repository</a>
-            </p>
+            </div>
           </div>
         </section>
       </form>
