use id instead of class to tag RadioBars

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -85,7 +85,7 @@
               <div class="max">8</div>
             </div>
             <h3>Time Period</h3>
-            <ul class="period options">
+            <ul id="period" class="options">
               <li id="month">Past Month</li>
               <li id="week">Past Week</li>
               <li id="day">Past Day</li>
@@ -106,7 +106,7 @@
               <p class="utc">Custom dates use UTC time.</p>
             </div>
             <h3>Region</h3>
-            <ul class="region options">
+            <ul id="region" class="options">
               <li id="worldwide">Worldwide</li>
               <li id="ca-nv">California-Nevada</li>
               <li id="customRegion">Custom</li>
@@ -128,13 +128,13 @@
               Seismicity are set automatically based on the Mainshock’s
               magnitude and estimated rupture length.</p>
             <h3>Earthquake Catalog</h3>
-            <ul class="catalog options">
+            <ul id="catalog" class="options">
               <li id="comcat">ComCat</li>
               <li id="dd">Double-Difference</li>
             </ul>
             <p class="dd option hide">Northern California events only</p>
             <h3>Time Zone</h3>
-            <ul class="timezone options">
+            <ul id="timezone" class="options">
               <li id="utc">UTC</li>
               <li id="user">User</li>
             </ul>
