--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -66,7 +66,7 @@
             <input type="text" id="eqid" value="" required="required"
               pattern="^[^/\\:]+$" tabindex="1">
             <div id="mainshock"></div>
-            <button type="reset" id="reset" class="dim">Reset</button>
+            <button type="reset" id="reset">Reset</button>
           </div>
         </section>
         <section id="searchBar" class="bar hide">
