--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -244,6 +244,9 @@
               <a href="https://github.com/shaefner-usgs/esc-eq-response">Github
                 repository</a>
             </div>
+            <a href="https://earthquake.usgs.gov/" target="new">
+              <img src="img/usgs-logo.svg" alt="USGS logo">
+            </a>
           </div>
         </section>
       </form>
