update header text

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -138,7 +138,7 @@
               <li id="utc">UTC</li>
               <li id="user">User</li>
             </ul>
-            <h3>Auto Refresh</h3>
+            <h3>Refresh</h3>
             <div class="refresh">
               <input type="checkbox" id="aftershocks" value="" class="switch">
               <label for="aftershocks"><span>Aftershocks</span></label>
