remove ‘selected’ attrs (set via SettingsBar)

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -146,7 +146,7 @@
                 <p>Every:</p>
                 <ul id="as-refresh" class="options">
                   <li class="m5">5 mins</li>
-                  <li class="m15 selected">15 mins</li>
+                  <li class="m15">15 mins</li>
                   <li class="m30">30 mins</li>
                   <li class="m60">60 mins</li>
                 </ul>
@@ -160,7 +160,7 @@
                 <p>Every:</p>
                 <ul id="cs-refresh" class="options">
                   <li class="m5">5 mins</li>
-                  <li class="m15 selected">15 mins</li>
+                  <li class="m15">15 mins</li>
                   <li class="m30">30 mins</li>
                   <li class="m60">60 mins</li>
                 </ul>
