add/remove ‘hide’ class for Mainshock transition

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -65,7 +65,7 @@
             <label for="eqid">Event ID</label>
             <input type="text" id="eqid" value="" required="required"
               pattern="^[^/\\:]+$" tabindex="1">
-            <div id="mainshock"></div>
+            <div id="mainshock" class="hide"></div>
             <button type="reset" id="reset">Reset</button>
           </div>
         </section>
