--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -169,38 +169,46 @@
                 <time></time>
               </div>
             </div>
-            <div class="aftershocks dd-aftershocks">
+            <div class="aftershocks dd-aftershocks disabled">
               <h3>Aftershocks</h3>
               <label for="as-mag">Min magnitude</label>
               <input type="number" id="as-mag" value="" min="0" max="9"
-                step="0.1" autocomplete="off" required="required" tabindex="4">
+                step="0.1" autocomplete="off" required="required" tabindex="4"
+                disabled="disabled" title="Disabled because no mainshock is selected">
               <label for="as-dist">Max distance <span>from Mainshock (km)</span></label>
               <input type="number" id="as-dist" value="" min="1" step="1"
-                autocomplete="off" required="required" tabindex="5">
+                autocomplete="off" required="required" tabindex="5"
+                disabled="disabled" title="Disabled because no mainshock is selected">
             </div>
-            <div class="foreshocks dd-foreshocks">
+            <div class="foreshocks dd-foreshocks disabled">
               <h3>Foreshocks</h3>
               <label for="fs-mag">Min magnitude</label>
               <input type="number" id="fs-mag" value="" min="0" max="9"
-                step="0.1" autocomplete="off" required="required" tabindex="6">
+                step="0.1" autocomplete="off" required="required" tabindex="6"
+                disabled="disabled" title="Disabled because no mainshock is selected">
               <label for="fs-dist">Max distance <span>from Mainshock (km)</span></label>
               <input type="number" id="fs-dist" value="" min="1" step="1"
-                autocomplete="off" required="required" tabindex="7">
+                autocomplete="off" required="required" tabindex="7"
+                disabled="disabled" title="Disabled because no mainshock is selected">
               <label for="fs-days">Max days <span>before Mainshock</span></label>
               <input type="number" id="fs-days" value="" min="1" step="1"
-                autocomplete="off" required="required" tabindex="8">
+                autocomplete="off" required="required" tabindex="8"
+                disabled="disabled" title="Disabled because no mainshock is selected">
             </div>
-            <div class="historical dd-historical">
+            <div class="historical dd-historical disabled">
               <h3>Historical Seismicity</h3>
               <label for="hs-mag">Min magnitude</label>
               <input type="number" id="hs-mag" value="" min="0" max="9"
-                step="0.1" autocomplete="off" required="required" tabindex="9">
+                step="0.1" autocomplete="off" required="required" tabindex="9"
+                disabled="disabled" title="Disabled because no mainshock is selected">
               <label for="hs-dist">Max distance <span>from Mainshock (km)</span></label>
               <input type="number" id="hs-dist" value="" min="1" step="1"
-                autocomplete="off" required="required" tabindex="10">
+                autocomplete="off" required="required" tabindex="10"
+                disabled="disabled" title="Disabled because no mainshock is selected">
               <label for="hs-years">Max years <span>before Mainshock</span></label>
               <input type="number" id="hs-years" value="" min="1" step="1"
-                autocomplete="off" required="required" tabindex="11">
+                autocomplete="off" required="required" tabindex="11"
+                disabled="disabled" title="Disabled because no mainshock is selected">
             </div>
             <p class="note">When you customize the settings, the
               <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
