update param names

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -142,11 +142,11 @@
             </ul>
             <h3>Refresh</h3>
             <div class="refresh">
-              <input type="checkbox" id="aftershocks" value="" class="switch">
-              <label for="aftershocks"><span>Aftershocks</span></label>
+              <input type="checkbox" id="as-refresh" value="" class="switch">
+              <label for="as-refresh"><span>Aftershocks</span></label>
               <div class="details hide">
                 <p>Every:</p>
-                <ul id="as-refresh" class="options">
+                <ul id="aftershocks" class="options">
                   <li class="m5">5 mins</li>
                   <li class="m15">15 mins</li>
                   <li class="m30">30 mins</li>
@@ -156,11 +156,11 @@
               </div>
             </div>
             <div class="refresh">
-              <input type="checkbox" id="catalog-search" value="" class="switch">
-              <label for="catalog-search"><span>Catalog Search</span></label>
+              <input type="checkbox" id="cs-refresh" value="" class="switch">
+              <label for="cs-refresh"><span>Catalog Search</span></label>
               <div class="details hide">
                 <p>Every:</p>
-                <ul id="cs-refresh" class="options">
+                <ul id="catalog-search" class="options">
                   <li class="m5">5 mins</li>
                   <li class="m15">15 mins</li>
                   <li class="m30">30 mins</li>
