--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -224,10 +224,10 @@
               <li class="mainshock">Mainshock</li>
               <li class="aftershocks">Aftershocks, Catalog Search
                 <ul>
-                  <li class="asHour">Past hour</li>
-                  <li class="asDay">Past day</li>
-                  <li class="asWeek">Past week</li>
-                  <li class="asOlder">Older</li>
+                  <li class="hour">Past hour</li>
+                  <li class="day">Past day</li>
+                  <li class="week">Past week</li>
+                  <li class="older">Older</li>
                 </ul>
               </li>
               <li class="foreshocks">Foreshocks</li>
