add ‘+ Key’ to Legend

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -27,7 +27,7 @@
           <li title="Select an Earthquake"><i class="icon-select"></i></li>
           <li title="Find an Earthquake"><i class="icon-search"></i></li>
           <li title="Settings"><i class="icon-settings"></i></li>
-          <li title="Legend"><i class="icon-legend"></i></li>
+          <li title="Legend + Key"><i class="icon-legend"></i></li>
           <li title="Info / About"><i class="icon-info"></i></li>
         </ul>
       </nav>
@@ -219,7 +219,7 @@
         </section>
         <section id="legendBar" class="bar hide">
           <div class="container">
-            <h2>Legend</h2>
+            <h2>Legend + Key</h2>
             <ul>
               <li class="mainshock">Mainshock</li>
               <li class="aftershocks">Aftershocks, Catalog Search
