use timestamp from Feature

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -151,7 +151,7 @@
                   <li class="m30">30 mins</li>
                   <li class="m60">60 mins</li>
                 </ul>
-                <time></time>
+                <div class="timestamp"></div>
               </div>
             </div>
             <div class="refresh">
@@ -165,7 +165,7 @@
                   <li class="m30">30 mins</li>
                   <li class="m60">60 mins</li>
                 </ul>
-                <time></time>
+                <div class="timestamp"></div>
               </div>
             </div>
             <div class="aftershocks dd-aftershocks disabled">
