--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -125,9 +125,6 @@
         <section id="settingsBar" class="bar hide">
           <div class="container">
             <h2>Settings</h2>
-            <p>Initial values for Aftershocks, Foreshocks, and Historical
-              Seismicity are set automatically based on the Mainshock’s
-              magnitude and estimated rupture length.</p>
             <h3>Earthquake Catalog</h3>
             <ul id="catalog" class="options">
               <li id="comcat">ComCat</li>
@@ -168,6 +165,9 @@
                 <div class="timestamp"></div>
               </div>
             </div>
+            <p class="explanation">Initial values for Aftershocks, Foreshocks,
+              and Historical Seismicity are set automatically based on the
+              Mainshock’s magnitude and estimated rupture length.</p>
             <div class="aftershocks dd-aftershocks disabled">
               <h3>Aftershocks</h3>
               <label for="as-mag">Min magnitude</label>
