--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -246,7 +246,7 @@
           <div class="container">
             <h2>Earthquake Response App</h2>
             <p>This web application creates an interactive Map, Plots, and Summary
-              of any earthquake using real-time data. It helps you visualize,
+              for any earthquake using real-time data. It helps you visualize,
               analyze, and collect information to use in talking points and
               scientific response.</p>
             <p>Earthquake data is from
