--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -55,7 +55,7 @@
             <h2>Select an Earthquake</h2>
             <p>Select an earthquake from the list or <a href="#mapPane">map</a>,
               or <a href="#" class="search">search</a> the catalog for an
-              earthquake. You can also enter an Event ID manually below.</p>
+              earthquake. You can also manually enter an Event ID below.</p>
             <h3>Significant Earthquakes <span>Past Month</span></h3>
             <div id="significant-eqs">
               <div class="spinner"></div>
