--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,
       maximum-scale=1.0, user-scalable=0">
     <title>Earthquake Response App</title>
-    <link rel="stylesheet" href="lib/flatpickr/flatpickr.css">
-    <link rel="stylesheet" href="lib/leaflet/leaflet.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
   </head>
@@ -61,7 +59,7 @@
               <div class="spinner"></div>
             </div>
             <h3>Mainshock</h3>
-            <label for="eqid">Event ID</label>
+            <label for="eqid" class="input">Event ID</label>
             <input type="text" id="eqid" value="" required="required"
               pattern="^[^/\\:]+$" tabindex="1">
             <div id="mainshock" class="hide"></div>
@@ -93,16 +91,16 @@
             <div class="customPeriod option hide">
               <div class="dates">
                 <div>
-                  <label for="starttime">Begin</label>
+                  <label for="starttime" class="input">Begin</label>
                   <input type="text" id="starttime" required="required" tabindex="2">
                 </div>
                 <span>–</span>
                 <div>
-                  <label for="endtime">End</label>
+                  <label for="endtime" class="input">End</label>
                   <input type="text" id="endtime" required="required" tabindex="3">
                 </div>
               </div>
-              <p class="utc">Custom dates use UTC time.</p>
+              <p class="utc info">Custom dates use UTC time.</p>
             </div>
             <h3>Region</h3>
             <ul id="region" class="options">
@@ -112,9 +110,9 @@
             </ul>
             <div class="customRegion option hide">
               <div id="region-map"></div>
+              <p class="instructions info hide">Click and drag to draw a new custom
+                region.</p>
             </div>
-            <p class="instructions hide">Click and drag to draw a new custom
-              region.</p>
             <button type="button" id="search">Search</button>
             <p class="note">When you search the catalog, the
               <abbr title="Uniform Resource Locator (web address)">URL</abbr> is
@@ -125,7 +123,7 @@
         <section id="settingsBar" class="bar hide">
           <div class="container">
             <h2>Settings</h2>
-            <p class="explanation">Initial values for Aftershocks, Foreshocks,
+            <p>Initial values for Aftershocks, Foreshocks,
               and Historical Seismicity are set automatically based on the
               Mainshock’s magnitude and estimated rupture length.</p>
             <h3>Earthquake Catalog</h3>
@@ -133,7 +131,7 @@
               <li id="comcat">ComCat</li>
               <li id="dd">Double-Difference</li>
             </ul>
-            <p class="dd option hide">Northern California events only</p>
+            <p class="dd option info hide">Northern California events only</p>
             <h3>Time Zone</h3>
             <ul id="timezone" class="options">
               <li id="utc">UTC</li>
@@ -143,7 +141,7 @@
             <div class="refresh">
               <input type="checkbox" id="as-refresh" value="" class="switch">
               <label for="as-refresh"><span>Aftershocks</span></label>
-              <div class="details hide">
+              <div class="details info hide">
                 <p>Every:</p>
                 <ul id="aftershocks" class="options">
                   <li class="m5">5 mins</li>
@@ -151,13 +149,13 @@
                   <li class="m30">30 mins</li>
                   <li class="m60">60 mins</li>
                 </ul>
-                <div class="timestamp"></div>
+                <dl class="props timestamp"></dl>
               </div>
             </div>
             <div class="refresh">
               <input type="checkbox" id="cs-refresh" value="" class="switch">
               <label for="cs-refresh"><span>Catalog Search</span></label>
-              <div class="details hide">
+              <div class="details info hide">
                 <p>Every:</p>
                 <ul id="catalog-search" class="options">
                   <li class="m5">5 mins</li>
@@ -165,46 +163,46 @@
                   <li class="m30">30 mins</li>
                   <li class="m60">60 mins</li>
                 </ul>
-                <div class="timestamp"></div>
+                <dl class="props timestamp"></dl>
               </div>
             </div>
             <div class="aftershocks dd-aftershocks disabled">
               <h3>Aftershocks</h3>
-              <label for="as-mag">Min magnitude</label>
+              <label for="as-mag" class="input">Min magnitude</label>
               <input type="number" id="as-mag" value="" min="0" max="9"
                 step="0.1" autocomplete="off" required="required" tabindex="4"
                 disabled="disabled" title="Disabled because no mainshock is selected">
-              <label for="as-dist">Max distance <span>from Mainshock (km)</span></label>
+              <label for="as-dist" class="input">Max distance <span>from Mainshock (km)</span></label>
               <input type="number" id="as-dist" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="5"
                 disabled="disabled" title="Disabled because no mainshock is selected">
             </div>
             <div class="foreshocks dd-foreshocks disabled">
               <h3>Foreshocks</h3>
-              <label for="fs-mag">Min magnitude</label>
+              <label for="fs-mag" class="input">Min magnitude</label>
               <input type="number" id="fs-mag" value="" min="0" max="9"
                 step="0.1" autocomplete="off" required="required" tabindex="6"
                 disabled="disabled" title="Disabled because no mainshock is selected">
-              <label for="fs-dist">Max distance <span>from Mainshock (km)</span></label>
+              <label for="fs-dist" class="input">Max distance <span>from Mainshock (km)</span></label>
               <input type="number" id="fs-dist" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="7"
                 disabled="disabled" title="Disabled because no mainshock is selected">
-              <label for="fs-days">Max days <span>before Mainshock</span></label>
+              <label for="fs-days" class="input">Max days <span>before Mainshock</span></label>
               <input type="number" id="fs-days" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="8"
                 disabled="disabled" title="Disabled because no mainshock is selected">
             </div>
             <div class="historical dd-historical disabled">
               <h3>Historical Seismicity</h3>
-              <label for="hs-mag">Min magnitude</label>
+              <label for="hs-mag" class="input">Min magnitude</label>
               <input type="number" id="hs-mag" value="" min="0" max="9"
                 step="0.1" autocomplete="off" required="required" tabindex="9"
                 disabled="disabled" title="Disabled because no mainshock is selected">
-              <label for="hs-dist">Max distance <span>from Mainshock (km)</span></label>
+              <label for="hs-dist" class="input">Max distance <span>from Mainshock (km)</span></label>
               <input type="number" id="hs-dist" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="10"
                 disabled="disabled" title="Disabled because no mainshock is selected">
-              <label for="hs-years">Max years <span>before Mainshock</span></label>
+              <label for="hs-years" class="input">Max years <span>before Mainshock</span></label>
               <input type="number" id="hs-years" value="" min="1" step="1"
                 autocomplete="off" required="required" tabindex="11"
                 disabled="disabled" title="Disabled because no mainshock is selected">
