--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -259,9 +259,9 @@
               <li>Click on an earthquake in a summary list or on a (2d) plot
                 to view the earthquake and additional details on the map.
               </li>
-              <li>Avoid unintentionally interacting with the plots by scrolling
-                 on the left / right edges of the page. Use the ‘control’ key to
-                 pan a 3d plot.
+              <li>Scroll on the left / right edges of the page to avoid
+                unintentionally interacting with the plots. Use the ‘control’
+                key to pan a 3d plot.
               </li>
             </ol>
             <h3>Contacts</h3>
